<resources>
    <string name="app_name">Yummy</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="do_not_have_an_account">Bạn chưa có tài khoản?</string>
    <string name="register_now">Đăng ký ngay</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="enter_email">Nhập email</string>
    <string name="enter_password">Nhập password</string>
    <string name="loading">Loading…</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="registered_amount">%d người đăng ký</string>
    <string name="comment_amount">Bình luận (%d)</string>
    <string name="new_post">Bài viết mới</string>
    <string name="comment">Bình luận</string>
    <string name="delete_post_success">Xoá bài viết thành công</string>
    <string name="profile">Trang cá nhân</string>
    <string name="create_an_account">Tạo tài khoản</string>
    <string name="full_name">Họ tên</string>
    <string name="confirm_password">Nhập lại password</string>
    <string name="register">Đăng ký</string>
    <string name="next">Tiếp theo</string>
    <string name="gender">Giới tính</string>
    <string name="avatar">Ảnh đại diện</string>
    <string name="address">Địa chỉ</string>
    <string name="characteristic">Tính cách</string>
    <string name="favorite_food">Món ăn yêu thích</string>
    <string name="logout">Đăng xuất</string>
    <string name="enter_full_name">Nhập họ tên</string>
    <string name="enter_confirm_password">Nhập lại password</string>
    <string name="enter_password_error">Password and confirm password must match</string>
    <string name="birthday">Ngày sinh</string>
    <string name="favorite">Sở thích</string>
    <string name="post">Bài viết</string>
    <string name="history">Lịch sử</string>
    <string name="review">Đánh giá</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="edit_profile">Chỉnh sửa thông tin</string>
    <string name="choose_date_of_birth">Chọn ngày sinh</string>
    <string name="enter_address">Nhập địa chỉ</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="people_join_in">Người tham gia</string>
    <string name="notification">Thông báo</string>
    <string name="food">Món ăn</string>
    <string name="content">Nội dung</string>
    <string name="search">Tìm kiếm</string>
    <string name="quick_search">Tìm kiếm nhanh</string>
    <string name="home">Trang chủ</string>
    <string name="suggestions">Gợi ý</string>
    <string name="send_request">Gửi yêu cầu</string>
    <string name="meeting">Cuộc hẹn</string>
    <string name="place">Địa điểm</string>
    <string name="time">Thời gian</string>
    <string name="people_in_the_group">Người tham gia</string>
    <string name="create_meeting">Tạo cuộc hẹn</string>
    <string name="select">Chọn</string>
    <string name="select_user">Chọn người tham gia</string>
    <string name="post_amount">%d người</string>
    <string name="time_remain">Còn %s</string>
    <string name="meeting_detail">Chi tiết cuộc hẹn</string>
    <string name="information">Thông tin</string>
    <string name="reject">Bỏ qua</string>
    <string name="accept">Đồng ý</string>
    <string name="rating_meeting">Đánh giá cuộc hẹn</string>
    <string name="rating_later">Đánh giá sau</string>
    <string name="rating_now">Đánh giá ngay</string>
    <string name="cancel">Hủy</string>
    <string name="ok">OK</string>
    <string name="add_comment">Thêm nhận xét</string>
    <string name="rating_message">Bạn chưa đánh giá</string>
    <string name="average_rating">Điểm  đánh  giá trung bình</string>
    <string name="all_reviews">Tất cả đánh giá</string>
    <string name="rate">Đánh giá</string>
    <string name="review_detail">Đánh giá chi tiết</string>
    <string name="registered">Đã đăng ký</string>
    <string name="confirm_log_out_message">Bạn có chắc chắn muốn đăng xuất?</string>
    <string name="meeting_amount">Số cuộc hẹn</string>
    <string name="trust_point">Điểm tin cậy</string>
    <string name="edit_rating">Chỉnh sửa đánh giá</string>
    <string name="kick_user_confirm_question">Bạn có chắc chắn muốn kick %s ra khỏi nhóm?</string>
    <string name="error_kick_user_meeting">Bạn không có quyền kick người này.</string>
    <string name="leave_meeting_confirm_question">Bạn có chắc chắn muốn rời khỏi cuộc hẹn này?</string>
    <string name="forgot_password_message">Chúng tôi cần bạn nhập email để gửi mã xác thực tạo mật khẩu mới</string>
    <string name="send_code">Gửi mã xác thực</string>
    <string name="enter_auth_code">Nhập mã xác thực</string>
    <string name="reset_password">Đặt lại mật khẩu</string>
    <string name="auth_code_not_match">Mã xác thực không đúng</string>
    <string name="change_password_success">Đổi mật khẩu thành công</string>
    <string name="age">Tuổi</string>
    <string name="search_condition">Giới tính: %s, Tuổi: %d - %d</string>
    <string name="all">Tất cả</string>
    <string name="select_age">Chọn độ tuổi</string>
    <string name="leave_meeting_reason">Lý do rời cuộc hẹn</string>
    <string name="trust_point_amount">Độ tin cậy: %d</string>
    <string name="review_point">Điểm đánh giá</string>
    <string name="send_request_to">Gửi yêu cầu đến</string>
    <string name="choose_place">Chọn địa điểm</string>
    <string name="choose_time">Chọn thời gian</string>
    <string name="enter_content">Nhập nội dung</string>
    <string name="send_request_success">Đã gửi yêu cầu thành công</string>
    <string name="send_request_title">%s đã gửi cho bạn một lời mời đi ăn chung</string>
    <string name="reject_request_message">Bạn đã từ chối lời mời</string>
    <string name="accept_request_message">Bạn đã đồng ý lời mời đi ăn</string>
    <string name="characteristic_description">Bạn hãy mô tả về tính cách của bạn.</string>
    <string name="select_your_favorite_food">Bạn hãy chọn loại món ăn mà bạn yêu thích</string>
    <string name="finish">Hoàn tất</string>
    <string name="sale">Khuyến mãi</string>
    <string name="create_post_with_link">Tạo bài viết với link đính kèm</string>
    <string name="voucher_detail">Chi tiết khuyến mãi</string>
    <string name="food_category">Loại món ăn</string>
    <string name="hint_search">Tìm kiếm bạn bè đi ăn chung</string>
    <string name="people_near_me">Người gần đây</string>
    <string name="voucher_near_me">Khuyến mãi gần bạn</string>
    <string name="suggest_post">Gợi ý bài viết</string>
    <string name="see_more">Xem thêm >> </string>
    <string name="post_detail">Chi tiết bài viết</string>
    <string name="input_comment">Nhập bình luận</string>
    <string name="done">Xong</string>
    <string name="enter_current_password">Nhập mật khẩu hiện tại</string>
    <string name="enter_new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="wrong_current_password">Mật khẩu hiện tại không đúng</string>
    <string name="wrong_confirm_password">Xác nhận mật khẩu không khớp</string>
    <string name="enter_link">Nhập liên kết</string>
    <string name="wrong_link">Liên kết không hợp lệ</string>
    <string name="enter_amount_of_people">Nhập số lượng người</string>
    <string name="enter_place">Chọn địa điểm</string>
    <string name="enter_time">Chọn thời gian</string>
    <string name="content_hint">Nội dung...</string>
    <string name="confirm_exit_app">Bạn có muốn thoát ứng dụng?</string>
    <string name="people_register">Người đăng ký</string>
    <string name="chat">Trò chuyện</string>
    <string name="input_message">Nhập nội dung</string>
    <string name="empty_rating">Chưa có đánh giá nào!</string>
    <string name="empty_post">Không có bài viết nào!</string>
    <string name="empty_meeting">Chưa có cuộc hẹn nào!</string>
    <string name="empty_notification">Không có thông báo nào!</string>
    <string name="empty_chat">Chưa có cuộc trò chuyện nào</string>
    <string name="empty_comment">Chưa có bình luận nào!</string>
    <string name="near_me">Gần tôi</string>
    <string name="select_favorite_food">Chọn sở thích ăn uống</string>
    <string name="none_select_favorite">Chưa chọn sở thích</string>
    <string name="boarding_title_1">Tạo bài viết trong 1 nốt nhạc</string>
    <string name="boarding_sub_1">Hỗ trợ người dùng tạo bài viết tìm kiếm người đi ăn chung một cách nhanh chóng. Lúc này người dùng khác sẽ nhìn thấy mong muốn của bạn và đăng kí tham gia nếu có nhu cầu.</string>
    <string name="boarding_title_2">Tạo cuộc hẹn - Gắn kết yêu thương</string>
    <string name="boarding_sub_2">Nhanh chóng xúc tiến cuộc gặp gỡ bằng cách tạo cuộc hẹn hò cùng người bạn mới. Cùng nhau nhận xét và cho điểm lẫn nhau sau khi cuộc hẹn kết thúc.</string>
    <string name="boarding_title_3">Truy lùng đối tượng nhanh như chớp</string>
    <string name="boarding_sub_3">Bằng các thao tác đơn giản, bạn có thể nhanh chóng tìm kiếm người đi ăn chung phù hợp cho mình.</string>
    <string name="boarding_title_4">Chat chi vi vu</string>
    <string name="boarding_sub_4">Hãy để Yummy giúp bạn tìm hiểu \"Đồng thực\" rõ hơn trước và sau khi đi ăn bằng chức năng Trò chuyện.</string>
    <string name="boarding_title_5">Hốt nhanh voucher - Tiết kiệm chi phí</string>
    <string name="boarding_sub_5">Gợi ý nhiều Voucher hấp dẫn được cập nhật liên tục. Với nguồn thông tin xác đáng từ Hotdeal và Foody.</string>
    <string name="skip">Bỏ qua</string>
    <string name="enter_validate_code">Nhập mã xác thực</string>
    <string name="enter_validate_code_message">Bạn hãy nhập mã xác thực mà chúng tôi đã gửi qua email cho bạn.</string>
    <string name="resend_code">Gửi lại mã</string>
    <string name="validate">Xác thực</string>
    <string name="resend_validate_code_success">Đã gửi mã xác thực qua email</string>
</resources>
