<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen_32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:gravity="center_horizontal"
        android:text="@string/create_an_account"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textColor="@color/black"
        app:backgroundTint="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:backgroundTint="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:backgroundTint="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:backgroundTint="@color/colorPrimary" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        fancy:fb_defaultColor="@color/colorPrimary"
        fancy:fb_radius="@dimen/dimen_32dp"
        android:text="@string/register"
        android:textAllCaps="true" />
</LinearLayout>