<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_locked"
        android:layout_marginTop="@dimen/dimen_56dp"
        android:layout_marginBottom="@dimen/dimen_16dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_message"
        android:gravity="center"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_8dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        app:backgroundTint="@color/colorPrimary"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/sendCodeButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        app:fb_defaultColor="@color/colorPrimary"
        app:fb_radius="@dimen/dimen_32dp"
        android:text="@string/send_code"
        android:textAllCaps="true" />
</LinearLayout>