<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="@dimen/dimen_56dp"
        android:layout_marginBottom="@dimen/dimen_32dp"/>


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        app:backgroundTint="@color/colorPrimary"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        app:backgroundTint="@color/colorPrimary"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:textColor="@color/black"
        android:inputType="textPassword"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_32dp"
            android:minHeight="20dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="#999999"
            android:background="?attr/selectableItemBackground"/>
    </FrameLayout>


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        fancy:fb_defaultColor="@color/colorPrimary"
        fancy:fb_radius="@dimen/dimen_32dp"
        android:text="@string/login"
        android:textAllCaps="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dimen_32dp"
        android:paddingEnd="@dimen/dimen_32dp"
        android:paddingBottom="@dimen/dimen_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_have_an_account"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:text="@string/register_now"
            android:textColor="@color/colorPrimary"
            android:background="?attr/selectableItemBackground"/>
    </LinearLayout>
</LinearLayout>