<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.example.thesis.yummy.view.TopBarView
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/codeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:hint="@string/enter_auth_code"
        android:inputType="number"
        android:textColor="@color/black"
        app:backgroundTint="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:backgroundTint="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:backgroundTint="@color/colorPrimary" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        app:fb_defaultColor="@color/colorPrimary"
        app:fb_radius="@dimen/dimen_32dp"
        android:text="@string/reset_password"
        android:textAllCaps="true" />
</LinearLayout>