<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.example.thesis.yummy.view.TopBarView
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_rating"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="@dimen/dimen_16dp"
        android:textStyle="bold"/>

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:isIndicator="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:text="@string/all_reviews"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reviewsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/rateButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:fb_defaultColor="@color/colorPrimary"
        app:fb_radius="5dp"
        android:text="@string/rate"
        android:visibility="gone"/>
</LinearLayout>